better display for <pre> overflow in wiki pages. Fixes #92.

--- a/media/style/main.css
+++ b/media/style/main.css
@@ -67,6 +67,9 @@ ul.bulleted li, .wikicontents ul>li, table.info ul li {
   list-style-type: circle;
   margin-left: 1em;
 }
+.wikicontents pre {
+  overflow-x: scroll;
+}
 a img {
     border-style: none;
 }
